deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  selector:
    matchLabels:
      app: demo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
        role: demo
    spec:
      containers:
        - name: demo
          image: itzelmunguia/demo:latest
          ports:
            - containerPort: 80
              name: demo




---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
        role: mysql
    spec:
      containers:
        - name: mysql
          image: itzelmunguia/mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - mountPath: "var/lib/mysql"
              subPath: "mysql"
              name: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  replicas: 1
  template:
    metadata:
      labels:
        app: phpmyadmin
        role: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: itzelmunguia/phpmyadmin:latest
          ports:
            - containerPort: 8080
              name: phpmyadmin

---
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  selector:
   app: demo
  type: LoadBalancer
  ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: 80
  selector:
    role: demo



---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
   app: mysql
  type: LoadBalancer
  ports:
   - name: http
     port: 3306
     protocol: TCP
     targetPort: 3306
  selector:
    role: mysql

---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
   app: phpmyadmin
  type: LoadBalancer
  ports:
   - name: http
     port: 8080
     protocol: TCP
     targetPort: 8080
  selector:
    role: phpmyadmin
