ingress-datacenter.yaml
# ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: nginx-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
     cert-manager.io/cluster-issuer: lets-encryp-production
spec:
 tls:
 - hosts:
   - datacenter.ucol.mx
   - pre-datacenter.ucol.mx  
   secretName: microbot-ingress-tls
 rules:
  - host: "datacenter.ucol.mx"
    http:
      paths:
      - pathType: Prefix
        path: /simplephp
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
      
  - host: "pre-datacenter.ucol.mx"
    http:
      paths:
      - pathType: Prefix
        path: /PruebaDemo
        backend:
          service:
            name: phpmyadmin2
            port:
              number: 80
